feat: add layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Header from '../components/Header.astro';
+
 interface Props {
 	title: string;
 }
@@ -17,7 +19,27 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<div class="drawer">
+			<input id="my-drawer" type="checkbox" class="drawer-toggle" />
+			<div class="drawer-content">
+				<Header />
+				<slot />
+			</div>
+			<div class="drawer-side">
+				<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+				<ul class="menu p-4 w-80 min-h-full bg-base-200 text-base-content">
+					<!-- Sidebar content here -->
+					<li><a href="agenda">Agenda</a></li>
+					<!-- <li><a href="speakers">Speakers</a></li> -->
+					<li><a href="sponsors">Sponsors</a></li>
+					<li><a href="CFP">CFP</a></li>
+					<li><a href="about">About</a></li>
+					<li><a href="coc">CoC</a></li>
+					<li><a href="agenda">Agenda</a></li>
+					<a class="btn btn-primary mt-4">Register</a>
+				</ul>
+			</div>
+		</div>
 	</body>
 </html>
 <style is:global>
