--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,13 @@
 ---
-import Header from '../components/Header.astro';
+import Drawer from '../components/Drawer.astro';
+import {SITE_TITLE} from "../constants";
 
 interface Props {
 	title: string;
 }
 
 const { title } = Astro.props;
+const metaTitle = `${SITE_TITLE} - ${title}`
 ---
 
 <!doctype html>
@@ -16,30 +18,12 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>{metaTitle}</title>
 	</head>
 	<body>
-		<div class="drawer">
-			<input id="my-drawer" type="checkbox" class="drawer-toggle" />
-			<div class="drawer-content">
-				<Header />
+			<Drawer>
 				<slot />
-			</div>
-			<div class="drawer-side">
-				<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-				<ul class="menu p-4 w-80 min-h-full bg-base-200 text-base-content">
-					<!-- Sidebar content here -->
-					<li><a href="agenda">Agenda</a></li>
-					<!-- <li><a href="speakers">Speakers</a></li> -->
-					<li><a href="sponsors">Sponsors</a></li>
-					<li><a href="CFP">CFP</a></li>
-					<li><a href="about">About</a></li>
-					<li><a href="coc">CoC</a></li>
-					<li><a href="agenda">Agenda</a></li>
-					<a class="btn btn-primary mt-4">Register</a>
-				</ul>
-			</div>
-		</div>
+			</Drawer>
 	</body>
 </html>
 <style is:global>
@@ -56,7 +40,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
+		background: #f6f6fc;
 		background-size: 224px;
 	}
 	code {
