feat: add homepage

--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -13,7 +13,7 @@ import Footer from "./Footer.astro";
     </div>
     <div class="drawer-side">
         <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-        <ul class="menu p-4 w-80 min-h-full bg-base-200 text-base-content">
+        <ul class="menu p-4 pt-20 w-80 min-h-full bg-base-200 text-base-content">
             {NAVIGATION_LINKS.map(link => <li><a href={link.href}>{link.title}</a></li>)}
             <a href="https://konfhub.com/tc-b34e332d"  target="_blank"><button class="btn btn-primary">Register</button></a>
         </ul>
