chore: resolve feedback on PR

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,11 @@ import {SITE_TITLE} from "../constants";
 			<div class="hero-content text-center">
 				<div class="max-w-ld flex flex-col items-center">
 					<h1 class="text-5xl pb-3 font-bold">This Is Learning Conference</h1>
-					<h2 class="text-3xl font-bold">Happening On 16-17 Of May</h2>
-					<p class="py-6">Registration Opens On Monday 19th Feb 6am CET</p>
+					<h2 class="text-3xl font-bold py-4">Happening on May 16-17</h2>
+					
 					<a href="https://konfhub.com/tc-b34e332d" target="_blank"><button class="btn btn-primary text-2xl font-medium">Register</button></a>
 
-					<div class="stats shadow mt-8 grid-flow-row md:grid-flow-col">
+					<!-- <div class="stats shadow mt-8 grid-flow-row md:grid-flow-col">
 
 						<div class="stat">
 							<div class="stat-title">Tracks</div>
@@ -32,7 +32,7 @@ import {SITE_TITLE} from "../constants";
 							<div class="stat-value">20</div>
 						</div>
 
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
