--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,23 +1,23 @@
 <header>
-    <div class="navbar h-[40px] bg-black/55">
+    <div class="navbar h-[40px]">
         <div class="flex-none">
             <label for="my-drawer" class="btn btn-square btn-ghost md:hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
             </label>
         </div>
         <div class="flex-1">
-            <a class="btn btn-ghost text-xl" href="/">TIL CONF</a>
+            <a class="btn btn-ghost text-3xl drop-shadow-til title" href="/">TIL CONF 2024</a>
         </div>
         <div class="flex-none">
             <ul class="menu menu-horizontal px-1 hidden md:flex">
-                <li><a href="agenda">Agenda</a></li>
+                <!-- <li><a href="agenda">Agenda</a></li> -->
                 <!-- <li><a href="speakers">Speakers</a></li> -->
-                <li><a href="sponsors">Sponsors</a></li>
-                <li><a href="cfp">CFP</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="coc">CoC</a></li>
+                <!-- <li><a href="sponsors">Sponsors</a></li> -->
+                <li><a href="https://docs.google.com/forms/d/1XyoW2doQvHg51Vh29iEgE6Q6RTX8zbmxJfOg9zAZQmM/viewform?edit_requested=true">CFP</a></li>
+                <!-- <li><a href="about">About</a></li> -->
+                <!-- <li><a href="coc">CoC</a></li> -->
             </ul>
-            <a href="https://konfhub.com/tc-b34e332d" class="hidden md:block" target="_blank"><button class="btn btn-primary">Register</button></a>
+            <a href="https://konfhub.com/tc-b34e332d" target="_blank"><button class="hidden md:block btn bg-[#eaddff] rounded-none border-2 border-[#21005d] drop-shadow-til text-2xl font-medium">Register</button></a>
         </div>
     </div>
 </header>
@@ -28,5 +28,10 @@
         position: sticky;
         top: 0;
         z-index: 1;
+    }
+
+    .title {
+        color: white;
+        -webkit-text-stroke: 1px #21005D;
     }
 </style>
