--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,8 @@
 ---
 import {SOCIAL_LINKS} from "../constants";
 ---
-<footer class="footer p-10 bg-base-300 text-base-content mt-20">
+<footer class="footer p-10 bg-[#D9D9D9] text-base-content">
+  <!--
   <nav>
     <h6 class="footer-title">Services</h6>
     <a class="link link-hover">Branding</a>
@@ -9,10 +10,16 @@ import {SOCIAL_LINKS} from "../constants";
     <a class="link link-hover">Marketing</a>
     <a class="link link-hover">Advertisement</a>
   </nav>
+  -->
   <nav>
     <h6 class="footer-title">Company</h6>
+    <a class="link link-hover" href="https://discord.com/invite/WquDAakwkK">Discord</a>
+    <a class="link link-hover" href="https://thisislearning.dev/">Website</a>
+    <!--
     <a class="link link-hover">About us</a>
     <a class="link link-hover">Contact</a>
+    -->
+
   </nav>
   <nav>
     <h6 class="footer-title">Social</h6>
@@ -21,7 +28,7 @@ import {SOCIAL_LINKS} from "../constants";
         <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
       </svg></a>
       <a href={SOCIAL_LINKS.youtube}><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
-      <a href={SOCIAL_LINKS.facebook}><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+      <!-- <a href={SOCIAL_LINKS.facebook}><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a> -->
     </div>
   </nav>
 </footer>
