--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,11 +14,12 @@ const metaTitle = `${SITE_TITLE} - ${title}`
 <html lang="en" data-theme="light">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="This Is Learning Conference 2024" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{metaTitle}</title>
+		<meta property="og:image" content={new URL('/images/banner.webp', Astro.url)} />
 	</head>
 	<body>
 			<Drawer>
