--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -8,7 +8,7 @@ import Footer from "./Footer.astro";
     <input id="my-drawer" type="checkbox" class="drawer-toggle" />
     <div class="drawer-content">
         <Header />
-        <main>
+        <main class="mx-4 mb-8">
         <slot />
         </main>
         <Footer />
