--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@
         <div class="flex-none">
             <ul class="menu menu-horizontal px-1 hidden md:flex">
                 <!-- <li><a href="agenda">Agenda</a></li> -->
-                <!-- <li><a href="speakers">Speakers</a></li> -->
+                <li><a class="text-xl" href="/speakers">Speakers</a></li>
                 <!-- <li><a href="sponsors">Sponsors</a></li> -->
                 <li><a class="text-xl" href="https://docs.google.com/forms/d/1XyoW2doQvHg51Vh29iEgE6Q6RTX8zbmxJfOg9zAZQmM/viewform?edit_requested=true">CFP</a></li>
                 <!-- <li><a href="about">About</a></li> -->
