feat: add speakers page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,6 +44,20 @@ const metaTitle = `${SITE_TITLE} - ${title}`
 			rgb(var(--accent-light)) 30%,
 			white 60%
 		);
+	--big_screen: 2000px;
+    --desktop_xl: 1920px;
+    --desktop: 1366px;
+    --desktop_sm: 1050px;
+    --tablet_max: 1025px;
+    --tablet_md: 1000px;
+    --tablet_min: 768px;
+    --mobile_lg: 600px;
+    --mobile_md: 420px;
+    --mobile_sm: 390px;
+    --mobile_xs: 281px;
+    --small_height: 593px;
+   --small_height_max: 800px;
+   --custom_stream_pass_iphone: 380px;
 	}
 	html {
 		font-family: "FreeSans Bold", sans-serif;
