feat: add speakers page

--- a/src/components/SpeakerCard.astro
+++ b/src/components/SpeakerCard.astro
@@ -26,7 +26,7 @@ const { subject, speakerImage, speakerName, speakerTitle, presentationTitle } = 
                 <ul class="flex flex-col gap-2 absolute -right-[190px] -bottom-2">
                   <li class="w-[201px] h-[85px] flex items-center justify-center text-[#31111D] bg-[#FFD8E4] rounded-none border-2 border-[#31111D] drop-shadow-til text-3xl font-medium text-center">{speakerName}</li>
                   <li class="w-[201px] h-[94px] flex items-center justify-center text-[#263238] bg-[#CFD8DC] rounded-none border-2 border-[#263238] drop-shadow-til text-sm font-medium text-center">{speakerTitle}</li>
-                  <li class="w-[201px] flex items-center justify-center text-[#1A237E] bg-[#C5CAE9] rounded-none border-2 border-[#1A237E] drop-shadow-til text-sm font-medium text-center">{presentationTitle}</li>
+                  <li class="w-[201px] flex items-center justify-center text-[#1A237E] bg-[#C5CAE9] rounded-none border-2 border-[#1A237E] drop-shadow-til text-sm font-medium text-center p-[3px]">{presentationTitle}</li>
                 </ul>
             </div>
         </div>
@@ -59,7 +59,7 @@ const { subject, speakerImage, speakerName, speakerTitle, presentationTitle } = 
    
 } */
 
-@media (max-width: 1050px) {
+@media (max-width: 1051px) {
     .speaker-card {
         width: 400px;
         height: 500px;
@@ -96,7 +96,7 @@ const { subject, speakerImage, speakerName, speakerTitle, presentationTitle } = 
   }
 
   li:nth-child(3) {
-    height: 55px;
+  
     font-size: 13px;
     line-height: 14px;
   }
