--- a/src/components/SpeakerCard.astro
+++ b/src/components/SpeakerCard.astro
@@ -22,7 +22,7 @@ const { subject, speakerImage, speakerName, speakerTitle, presentationTitle } = 
         </div>
         <div>
             <div class="speaker-image relative w-[250px] h-[300px] bg-[#D9D9D9] rounded-none border-2 border-[#21005d] drop-shadow-til text-xl font-medium">
-                <Image src={speakerImage} alt="til conf image" class="object-cover"/> 
+                <Image src={speakerImage}  alt="til conf image" class="object-cover h-[100%]"/> 
                 <ul class="flex flex-col gap-2 absolute -right-[190px] -bottom-2">
                   <li class="w-[201px] h-[85px] flex items-center justify-center text-[#31111D] bg-[#FFD8E4] rounded-none border-2 border-[#31111D] drop-shadow-til text-3xl font-medium text-center">{speakerName}</li>
                   <li class="w-[201px] h-[94px] flex items-center justify-center text-[#263238] bg-[#CFD8DC] rounded-none border-2 border-[#263238] drop-shadow-til text-sm font-medium text-center">{speakerTitle}</li>
