--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import {SOCIAL_LINKS} from "../constants";
 ---
-<footer class="footer p-10 bg-[#D9D9D9] text-base-content">
+<footer class="footer p-10 bg-[#969393ec] text-base-content">
   <!--
   <nav>
     <h6 class="footer-title">Services</h6>
