chore: make footer accessible

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import {SOCIAL_LINKS} from "../constants";
 ---
-<footer class="footer p-10 bg-[#969393ec] text-base-content">
+<footer class="footer p-10 bg-[#D9D9D9] text-base-content">
 
   <!--
   <nav>
@@ -13,7 +13,7 @@ import {SOCIAL_LINKS} from "../constants";
   </nav>
   -->
   <nav>
-    <h6 class="footer-title">Company</h6>
+    <h6 class="footer-title opacity-[0.7]">Company</h6>
     <a class="link link-hover" href="https://discord.com/invite/WquDAakwkK">Discord</a>
     <a class="link link-hover" href="https://thisislearning.dev/">Website</a>
     <!--
@@ -23,7 +23,7 @@ import {SOCIAL_LINKS} from "../constants";
 
   </nav>
   <nav>
-    <h6 class="footer-title">Social</h6>
+    <h6 class="footer-title opacity-[0.7]">Social</h6>
     <div class="grid grid-flow-col gap-4">
       <a aria-label="Twitter" href={SOCIAL_LINKS.twitter}><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
         <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
