feat: add online mention

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import {Image} from 'astro:assets';
             <div class="max-w-ld flex flex-col items-center">
                 <Image src="/images/cover.png" alt="" height="400" width="400"/>
                 <h1 class="text-5xl pb-3 font-bold">This Is Learning Conference</h1>
-                <h2 class="text-3xl font-bold py-4">Happening on May 16-17</h2>
+                <h2 class="text-3xl font-bold py-4">Happening on May 16-17, Online</h2>
 
                 <a href="https://konfhub.com/tc-b34e332d" target="_blank">
                     <button class="btn bg-[#eaddff] rounded-none border-2 border-[#21005d] drop-shadow-til text-2xl font-medium">
