--- a/src/components/SpeakerCard.astro
+++ b/src/components/SpeakerCard.astro
@@ -24,8 +24,8 @@ const { subject, speakerImage, speakerName, speakerTitle, presentationTitle } = 
             <div class="speaker-image relative w-[250px] h-[300px] bg-[#D9D9D9] rounded-none border-2 border-[#21005d] drop-shadow-til text-xl font-medium">
                 <Image src={speakerImage}  alt="til conf image" class="object-cover h-[100%]"/> 
                 <ul class="flex flex-col gap-2 absolute -right-[190px] -bottom-2">
-                  <li class="w-[201px] h-[85px] flex items-center justify-center text-[#31111D] bg-[#FFD8E4] rounded-none border-2 border-[#31111D] drop-shadow-til text-3xl font-medium text-center">{speakerName}</li>
-                  <li class="w-[201px] h-[94px] flex items-center justify-center text-[#263238] bg-[#CFD8DC] rounded-none border-2 border-[#263238] drop-shadow-til text-sm font-medium text-center">{speakerTitle}</li>
+                  <li class="w-[201px] p-[10px] flex items-center justify-center text-[#31111D] bg-[#FFD8E4] rounded-none border-2 border-[#31111D] drop-shadow-til text-3xl font-medium text-center">{speakerName}</li>
+                  <li class="w-[201px] p-[15px]  flex items-center justify-center text-[#263238] bg-[#CFD8DC] rounded-none border-2 border-[#263238] drop-shadow-til text-sm font-medium text-center">{speakerTitle}</li>
                   <li class="w-[201px] flex items-center justify-center text-[#1A237E] bg-[#C5CAE9] rounded-none border-2 border-[#1A237E] drop-shadow-til text-sm font-medium text-center p-[3px]">{presentationTitle}</li>
                 </ul>
             </div>
@@ -77,13 +77,11 @@ const { subject, speakerImage, speakerName, speakerTitle, presentationTitle } = 
   }
 
   li:nth-child(1){
-    height: 75px;
     font-size: 22px;
     line-height: 24px;
   }
 
   li:nth-child(2) {
-    height: 70px;
     font-size: 10px;
     line-height: 14px;
   }
@@ -139,19 +137,17 @@ const { subject, speakerImage, speakerName, speakerTitle, presentationTitle } = 
   }
 
   li:nth-child(1){
-    height: 60px;
     font-size: 15px;
     line-height: 20px;
   }
 
   li:nth-child(2) {
-    height: 55px;
     font-size: 8px;
     line-height: 9px;
   }
 
   li:nth-child(3) {
-    height: 50px;
+
     font-size: 8px;
     line-height: 9px;
   }
