--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -4,8 +4,8 @@ import {NAVIGATION_LINKS} from "../constants";
 import Footer from "./Footer.astro";
 ---
 
-<div class="drawer">
-    <input id="my-drawer" type="checkbox" class="drawer-toggle" />
+<div class="drawer drawer-end">
+    <input id="my-drawer" type="checkbox" class="drawer-toggle  bg-red-500" />
     <div class="drawer-content">
         <Header />
         <main class="mx-4 mb-8">
