--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,14 @@
 <header>
     <div class="navbar h-[40px]">
-        <div class="flex-none">
+        <div class="w-[100%]">
+            <div class="flex-1">
+                <a class="btn btn-ghost text-3xl drop-shadow-til title" href="/">TIL CONF 2024</a>
+            </div>
             <label for="my-drawer" class="btn btn-square btn-ghost md:hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
             </label>
         </div>
-        <div class="flex-1">
-            <a class="btn btn-ghost text-3xl drop-shadow-til title" href="/">TIL CONF 2024</a>
-        </div>
+      
         <div class="flex-none">
             <ul class="menu menu-horizontal px-1 hidden md:flex">
                 <!-- <li><a href="agenda">Agenda</a></li> -->
