Remove CFP link from the app

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@
                 <!-- <li><a href="agenda">Agenda</a></li> -->
                 <li><a class="text-xl" href="/speakers">Speakers</a></li>
                 <!-- <li><a href="sponsors">Sponsors</a></li> -->
-                <li><a class="text-xl" href="https://docs.google.com/forms/d/1XyoW2doQvHg51Vh29iEgE6Q6RTX8zbmxJfOg9zAZQmM/viewform?edit_requested=true">CFP</a></li>
+                <!-- <li><a class="text-xl" href="https://docs.google.com/forms/d/1XyoW2doQvHg51Vh29iEgE6Q6RTX8zbmxJfOg9zAZQmM/viewform?edit_requested=true">CFP</a></li> -->
                 <!-- <li><a href="about">About</a></li> -->
                 <li><a class="text-xl" href="/coc">CoC</a></li>
             </ul>
@@ -51,6 +51,4 @@ window.addEventListener('scroll', function() {
     }
   });
 </script>
-
-
 
