--- a/src/pages/agenda-day1.astro
+++ b/src/pages/agenda-day1.astro
@@ -19,8 +19,8 @@ import HeaderHero from '../components/HeaderHero.astro';
                 <span class="track-slot" aria-hidden="true" style="grid-column: track-3; grid-row: tracks;">Track 3</span>
                 <span class="track-slot" aria-hidden="true" style="grid-column: track-4; grid-row: tracks;">Track 4</span>
 
-                <div class="session session-7 track-all" style="grid-column: track-1-start / track-4-end; grid-row: time-0400 / time-0430;">
-                    <h3 class="session-title">Canvas Chronicles: Crafting Text Containers</h3>
+                <div class="session session-7 track-1" style="grid-column: track-1-start / track-4-end; grid-row: time-0400 / time-0430;">
+                    <h3 class="session-title">Keynote: Canvas Chronicles: Crafting Text Containers</h3>
                     <span class="session-presenter">Aakansha Doshi</span>
                 </div>
 
